# MapleDumper-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  REVIEW.md  patterns.sample.txt
.github/workflows/: ci.yml
crates/maple-app/: Cargo.toml  frontend_test.cjs  tauri.conf.json
crates/maple-app/capabilities/: default.json
crates/maple-app/frontend/: app.js  i18n.js  index.html  style.css
crates/maple-app/src/: history.rs  history_cmd.rs  main.rs  scan.rs  sigmaker.rs
crates/maple-cli/: Cargo.toml
crates/maple-cli/src/: main.rs
crates/maple-core/: Cargo.toml
crates/maple-core/benches/: scan.rs
crates/maple-core/examples/: sig_validate.rs  throughput.rs
crates/maple-core/src/: categorizer.rs  domain.rs  engine.rs  fileimage.rs  lib.rs  memory.rs  output.rs  pattern.rs  process.rs  resolver.rs  scanner.rs  sigmaker.rs
crates/maple-core/src/sigmaker/: identity.rs  mod.rs  types.rs
crates/maple-core/tests/: golden.rs
crates/maple-gui/: Cargo.toml  build.rs
crates/maple-gui/src/: main.rs
crates/maple-gui/ui/: app.slint
